# anti-cheat-testing-tool

./: .gitignore  CMakeLists.txt  NOTICE  README.md
dependencies/yaml-cpp/lib/: yaml-cpp-x86.lib  yaml-cpp.lib
src/: CreateRemoteThreadInjection.cpp  CreateRemoteThreadInjection.h  ExecHeap.cpp  ExecHeap.h  ManualMapping.cpp  ManualMapping.h  ReadMemory.cpp  ReadMemory.h  WriteMemory.cpp  WriteMemory.h  cheatmanager.cpp  cheatmanager.h  config_builder.py  debug.h  dllinjection.h  logger.cpp  logger.h  main.cpp  memoryaccess.h  module.h  process.cpp  process.h  utilities.cpp  utilities.h
src/Base/: cheatmanager.h
src/Base/Modules/: dllinjection.h
src/Implementations/Dllinjection/: CreateRemoteThreadInjection.h  ManualMapping.h
src/Implementations/Memory/: ExecHeap.cpp  ReadMemory.h  WriteMemory.cpp  WriteMemory.h
src/Utils/: implementation_imports.h  logger.cpp  memoryaccess.h  utilities.cpp  utilities.h
src/dll-module/: FunctionHandlers.cpp  FunctionHandlers.h  HardwareHook.cpp  HardwareHook.h  IATHook.cpp  IATHook.h  PageGuardHook.cpp  PageGuardHook.h  PipeServer.cpp  PipeServer.h  dllmain.cpp  struct_definitions.h
src/main-module/: Demo.cpp  main.cpp
src/main-module/Base/: cheatmanager.cpp  cheatmanager.h  memoryaccess.h  module.h  modulefactory.cpp  modulefactory.h  variable.cpp  variable.h
src/main-module/Base/Modules/: funchook.h  memoryaccess.cpp  module.h  (+1 more)
src/main-module/Utils/: implementation_imports.h  loadconfig.cpp  loadconfig.h  logger.cpp  logger.h  notes.h  pipeclient.cpp  pipeclient.h  process.cpp  process.h  utilities.cpp  utilities.h
(+22 files in other folders)
